--- a/recursos.html
+++ b/recursos.html
@@ -8,62 +8,27 @@
 </head>
 <body>
 
-  <!-- ===== NAV ===== -->
+  <!-- NAV -->
   <nav>
-    <a href="index.html">Inicio</a>
-    <a href="quienes.html">Quiénes Somos</a>
-    <a href="horarios.html">Horarios</a>
-    <a href="direccion.html">Dirección</a>
-    <a href="recursos.html">Recursos</a>
+    <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="quienes.html">Quiénes Somos</a></li>
+      <li><a href="horarios.html">Horarios</a></li>
+      <li><a href="direccion.html">Dirección</a></li>
+      <li><a href="recursos.html" class="active">Recursos</a></li>
+    </ul>
   </nav>
 
-  <!-- ===== HERO ===== -->
-  <header class="page-hero otros" style="bible.jpeg: url('img/recursos.jpg');">
-  <h1>Recursos</h1>
-</header>
+  <!-- HERO -->
+  <header class="page-hero otros" style="background-image: url('img/recursos.jpg');">
+    <h1>Recursos</h1>
+  </header>
 
-  <!-- ===== CONTENIDO ===== -->
+  <!-- CONTENIDO -->
   <main class="main-content">
     <section>
       <h2>Material para tu crecimiento espiritual</h2>
       <div class="recursos">
-        
-        <!-- Tarjeta 1 -->
         <div class="recurso-card">
           <h3>Predicaciones en Video</h3>
           <p>Accede a nuestras predicaciones grabadas en YouTube.</p>
-          <a href="https://www.youtube.com/@iglesiaibep1981" target="_blank">Ver Canal</a>
-        </div>
-
-        <!-- Tarjeta 2 -->
-        <div class="recurso-card">
-          <h3>Estudios Bíblicos en PDF</h3>
-          <p>Descarga material de apoyo para profundizar en la Palabra.</p>
-          <a href="docs/estudio1.pdf" target="_blank">Descargar</a>
-        </div>
-
-        <!-- Tarjeta 3 -->
-        <div class="recurso-card">
-          <h3>Devocionales</h3>
-          <p>Lecturas diarias para fortalecer tu relación con Dios.</p>
-          <a href="docs/devocional.pdf" target="_blank">Abrir</a>
-        </div>
-
-        <!-- Tarjeta 4 -->
-        <div class="recurso-card">
-          <h3>Audio Sermones</h3>
-          <p>Escucha nuestras enseñanzas en formato de audio.</p>
-          <a href="audios/sermon1.mp3" target="_blank">Escuchar</a>
-        </div>
-
-      </div>
-    </section>
-  </main>
-
-  <!-- ===== FOOTER ===== -->
-  <footer>
-    © 2025 Iglesia Bautista Emanuel del Prat
-  </footer>
-
-</body>
-</html>
