--- a/direccion.html
+++ b/direccion.html
@@ -20,7 +20,7 @@
   </nav>
 
   <!-- HERO -->
-  <header class="page-hero otros" style="direccion.jpeg: url('img/direccion.jpg');">
+  <header class="page-hero otros" style="background-image: url('img/direccion.jpeg');">
     <h1>Dónde Estamos</h1>
   </header>
 
