--- a/horarios.html
+++ b/horarios.html
@@ -20,7 +20,7 @@
   </nav>
 
   <!-- HERO -->
-  <header class="page-hero otros" style="background-image: url('img/horarios.jpg');">
+  <header class="page-hero otros" style="background-image: url('img/horarios.jpeg');">
     <h1>Horarios</h1>
   </header>
 
