--- a/quienes.html
+++ b/quienes.html
@@ -20,7 +20,7 @@
   </nav>
 
   <!-- HERO -->
-  <header class="page-hero otros" style="quienes: url('img/quienes.jpg');">
+  <header class="page-hero otros" style="background-image: url('img/quienes.jpg');">
     <h1>Quiénes Somos</h1>
   </header>
 
