--- a/recursos.html
+++ b/recursos.html
@@ -20,7 +20,7 @@
   </nav>
 
   <!-- HERO -->
-  <header class="page-hero otros" style="background-image: url('img/recursos.jpg');">
+  <header class="page-hero otros" style="background-image: url('img/recursos.jpeg');">
     <h1>Recursos</h1>
   </header>
 
