--- a/direccion.html
+++ b/direccion.html
@@ -30,7 +30,7 @@
     <!-- Dirección a la izquierda -->
     <div class="map-text">
       <h2>Iglesia Bautista Emanuel del Prat</h2>
-      <p>Avinguda del Remolar, 62-64, 08820 El Prat de Llobregat, Barcelona</p>
+      <p>Carrer de Girona, 153, Local 1, 08820 El Prat de Llobregat, Barcelona</p>
     </div>
 
     <!-- Mapa a la derecha -->
