--- a/recursos.html
+++ b/recursos.html
@@ -32,3 +32,11 @@
         <div class="recurso-card">
           <h3>Predicaciones en Video</h3>
           <p>Accede a nuestras predicaciones grabadas en YouTube.</p>
+<!-- Tarjeta 1 -->
+<div class="recurso-card">
+  <h3>Predicaciones en Video</h3>
+  <p>Accede a nuestras predicaciones grabadas en YouTube.</p>
+  <a href="https://www.youtube.com/@iglesiaibep1981" target="_blank" rel="noopener noreferrer">
+    Ver Canal
+  </a>
+</div>
