--- a/direccion.html
+++ b/direccion.html
@@ -35,7 +35,7 @@
 
     <!-- Mapa a la derecha -->
     <iframe
-      src="https://www.google.com/maps/place/Iglesia+Bautista+Emanuel/@41.3227413,2.0957309,17z/data=!3m1!4b1!4m6!3m5!1s0x12a49ec04521546f:0x64b25288b8c4fae7!8m2!3d41.3227373!4d2.0983058!16s%2Fg%2F11cns7th66?entry=ttu&g_ep=EgoyMDI1MDkxMC4wIKXMDSoASAFQAw%3D%3D"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2993.847067045392!2d2.085642915238635!3d41.35082277927324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a46d6b65b7ef%3A0x4b6d2a55dff5dfd2!2sCarrer%20de%20Girona%2C%20153%2C%2008820%20El%20Prat%20de%20Llobregat%2C%20Barcelona!5e0!3m2!1ses!2ses!4v1694459000000!5m2!1ses!2ses"
       allowfullscreen=""
       loading="lazy"
       referrerpolicy="no-referrer-when-downgrade">
