--- a/index.html
+++ b/index.html
@@ -39,3 +39,7 @@
 
 </body>
 </html>
+<footer>
+  © 2025 Iglesia Bautista Emanuel del Prat
+  <img src="img/logo.png" alt="Logo Iglesia" class="footer-logo">
+</footer>
