--- a/quienes.html
+++ b/quienes.html
@@ -30,6 +30,8 @@
       <h2>Nuestra Historia</h2>
       <p>Somos una comunidad cristiana que se reúne para estudiar la Biblia, crecer en la fe y compartir el amor de Cristo.</p>
       <p>Nuestra misión es llevar el evangelio a todos y servir a nuestra ciudad con un corazón lleno de compasión.</p>
+
+      <h2>Que Creemos</h2>
     </section>
   </main>
 
