--- a/quienes.html
+++ b/quienes.html
@@ -33,13 +33,31 @@
 
       <h2>NUESTRAS CREENCIAS</h2>
       <p>
-Somos una iglesia bautista independiente que se identifica con los principios históricos bautistas que ya estaban en existencia antes de la reforma. No somos parte de ninguna asociación, ya que reconocemos que la iglesia es el único organismo autorizado por Dios para la extensión del reino y la predicación del evangelio y que cada iglesia debe actuar con total sujeción a Cristo, quien es su cabeza y fundador, bajo la guía del Espíritu Santo a través de la Palabra de Dios.
-No formamos parte ni apoyamos ningún movimiento ecuménico que tratan de fomentar unidad a expensas de la verdad y los principios revelados en la Biblia.  
-No somos interdenominacionales, ni tampoco adenominacionales, somos Bautistas pura y simplemente
-Nuestras creencias son las mismas que los Bautistas han creído a través de los siglos, las mismas por las cuales fueron perseguidos y martirizados nuestros antepasados, que aunque no siempre se les llamó bautistas, mantuvieron una identidad propia que los ha distinguido de la iglesia apóstata institucional.
-No surgimos de los reformadores o protestantes, sino de las iglesias verdaderas que no se apegaron al régimen gubernamental religioso post-apostólico. Tenemos nuestros distintivos, los creemos y los predicamos. 
-La Biblia es nuestra regla de Fe y Práctica y el fundamento de nuestra doctrina. 
-No somos parte del movimiento fundamentalista iniciado por múltiples denominaciones, ecuménicos en esencia histórica, sino bíblicos. 
+<p>Somos una iglesia bautista independiente que se identifica con los principios históricos bautistas que ya estaban en<p>
+  
+<p>existencia antes de la reforma. No somos parte de ninguna asociación, ya que reconocemos que la iglesia es el único organismo<p> 
+  
+<p>autorizado por Dios para la extensión del reino y la predicación del evangelio y que cada iglesia debe actuar con total sujeción<p>
+  
+<p>a Cristo, quien es su cabeza y fundador, bajo la guía del Espíritu Santo a través de la Palabra de Dios.<p>
+
+<p>No formamos parte ni apoyamos ningún movimiento ecuménico que tratan de fomentar unidad a expensas de la verdad y los principios<p> 
+  
+<p>revelados en la Biblia.<p>
+  
+<p>No somos interdenominacionales, ni tampoco adenominacionales, somos Bautistas pura y simplemente Nuestras creencias son las mismas<p>
+  
+<p>que los Bautistas han creído a través de los siglos, las mismas por las cuales fueron perseguidos y martirizados nuestros antepasados,<p>
+  
+<p>que aunque no siempre se les llamó bautistas, mantuvieron una identidad propia que los ha distinguido de la iglesia apóstata institucional.<p>
+  
+<p>No surgimos de los reformadores o protestantes, sino de las iglesias verdaderas que no se apegaron al régimen gubernamental religioso<p>
+  
+<p>post-apostólico. Tenemos nuestros distintivos, los creemos y los predicamos.<p>
+  
+<p>La Biblia es nuestra regla de Fe y Práctica y el fundamento de nuestra doctrina. No somos parte del movimiento fundamentalista iniciado<p>
+  
+<p>por múltiples denominaciones, ecuménicos en esencia histórica, sino bíblicos. <p>
     </section>
   </main>
 
