--- a/quienes.html
+++ b/quienes.html
@@ -30,13 +30,13 @@
       <h2>Nuestra Historia</h2>
       <p>Somos una comunidad cristiana establecida desde 1981. El Pastor C. Neil Fortner vino a Barcelona en 1975 .</p>
 
-      <p>con su esposa Tina L. Fortner como misioneros enviados desde la iglesia Emannuel Baptis Church en Trenton TN EEUU.<p>  
+      <p>con su esposa Tina L. Fortner como misioneros enviados por la iglesia Emannuel Baptis Church en Trenton TN EEUU.<p>  
 
-      <p>Empecaron a reunirse en las casas de lo hermanos que se ivan uniend a la Iglesia. Poco a poco esta fue creciendo<p>
+      <p>Empecaron a reunirse en las casas de los hermanos que se iban uniendo a la Iglesia. Poco a poco esta fue creciendo<p>
 
       <p>y cambiano de lugar, pero siempre en el area de Barcelona. A dia de hoy somos una pequeña congregacion reuniendonos<p>
 
-      <p>con el objetivo de predicar a Cristo.<p>
+      <p>con el objetivo de seguir predicar a Cristo.<p>
         
       
 
