--- a/quienes.html
+++ b/quienes.html
@@ -37,6 +37,8 @@
       <p>y cambiano de lugar, pero siempre en el area de Barcelona. A dia de hoy somos una pequeña congregacion reuniendonos<p>
 
       <p>con el objetivo de seguir predicar a Cristo.<p>
+
+      <h2>Confesion de Fe</h2> 
         
       
 
