--- a/quienes.html
+++ b/quienes.html
@@ -30,7 +30,7 @@
       <h2>Nuestra Historia</h2>
       <p>Somos una comunidad cristiana establecida desde 1981. El Pastor C. Neil Fortner vino a Barcelona en 1975 .</p>
 
-      <p>con su esposa Tina L. Fortner como misioneros enviados por la iglesia Immanuel Baptist Church en Trenton TN EEUU.<p>  
+      <p>con su esposa Tina L. Fortner como misioneros enviados por la iglesia Immanuel Baptist Church en Jackson TN EEUU.<p>  
 
       <p>Empezaron a reunirse en las casas de los hermanos que se iban uniendo a la Iglesia. Poco a poco esta fue creciendo<p>
 
